[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://env/WallSpwner.tscn" type="PackedScene" id=2]
[ext_resource path="res://env/flow.tscn" type="PackedScene" id=3]
[ext_resource path="res://env/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://env/Menus.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 242.5, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -184.0
margin_top = -69.0
margin_right = 612.0
margin_bottom = 906.0
color = Color( 0.596078, 0.717647, 0.87451, 1 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Menus" parent="." instance=ExtResource( 6 )]

[node name="flow" parent="." instance=ExtResource( 3 )]
position = Vector2( 214, 795 )

[node name="WallSpwner" parent="." instance=ExtResource( 2 )]
position = Vector2( 500, 0 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 275 )

[node name="top" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
position = Vector2( 227, -11 )
shape = SubResource( 1 )

[connection signal="start_game" from="Menus" to="." method="_on_Menus_start_game"]
[connection signal="die_signal" from="player" to="." method="_on_player_die_signal"]
